--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
-project(LRutilityHLS)
+project(utilityHLS)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(LRutilityHLS main.cpp LRutilityHLS.h test.cpp test.h)
+add_executable(utilityHLS main.cpp test.cpp test.h utilityHLS.h)
