Changed test class with box class for testing mapHLS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(utilityHLS)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(utilityHLS main.cpp test.cpp test.h utilityHLS.h)
+add_executable(utilityHLS main.cpp box.h box.cpp utilityHLS.h)
